# scvi-tools-mcp

./: .codecov.yaml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  release_checklist.md
.github/workflows/: refresh_knowledge.yaml  release.yaml  sync_huggingface_hub.yaml  sync_model_knowledge.yaml  sync_tutorials.yaml  test.yaml
docs/: conf.py  faq.md  index.md  installation.md  references.md
docs/architecture/: index.md  scvi-tools-mcp-block-diagram.html
docs/superpowers/plans/: 2026-06-09-scvi-tools-mcp.md
docs/superpowers/specs/: 2026-06-09-scvi-tools-mcp-design.md  2026-06-15-scvi-tools-hub-knowledge-source-design.md
scripts/: convert_notebooks.py  extract_api_docs.py  scrape_external.py  scrape_huggingface_hub.py
src/scvi_tools_mcp/: main.py  mcp.py
src/scvi_tools_mcp/knowledge/: .last_synced_commit
src/scvi_tools_mcp/knowledge/api/: cellassign.md  contrastivevi.md  gimvi.md  linearscvi.md  mrvi.md  multivi.md  peakvi.md  scanvi.md  scbasset.md  scvi.md  solo.md  stereoscope.md  sysvi.md  totalvi.md  velovi.md
src/scvi_tools_mcp/knowledge/background/: counterfactual_prediction.md  differential_abundance.md  (+3 more)
src/scvi_tools_mcp/tools/: _api_reference.py  _constants.py  _data_prep.py  _hub.py  _model_guidance.py  _troubleshooting.py  _tutorials.py  _workflows.py  utils.py
tests/: conftest.py  test_scripts.py  test_tools.py  test_utils.py
tests/fixtures/: sample_notebook.ipynb
(+136 files in other folders)
